# clientify

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/clientify/: __init__.py  __main__.py  errors.py  generator.py  ir.py  loader.py  openapi.py  version.py
src/clientify/backends/: __init__.py  aiohttp_backend.py  httpx_backend.py  requests_backend.py
src/clientify/generation/: __init__.py  client.py  emitter.py  models.py  profile.py  type_emitter.py  types.py
src/clientify/generation/client/: __init__.py  context.py  helpers.py  maps.py  methods.py  params.py  protocols.py  response.py  templates.py
tests/: conftest.py
tests/backends/: test_backends.py
tests/cli/: test_main.py
tests/generation/: test_client.py  test_emitter.py  test_generator.py  test_models.py  test_type_emitter.py  test_types.py
tests/integration/: __init__.py  conftest.py  openapi.yaml  server.py  test_client_integration.py
tests/ir/: test_ir.py
tests/loader/: test_loader.py
